# read_it_later

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
chrome-extension/: background.js  context-manager-popup.html  context-manager-popup.js  manifest.json  popup.html  popup.js
docs/chrome-extension/: README.md
docs/docker-compose/: README.md
docs/docker-compose/postgres/: .env  docker-compose.yml
docs/docker-compose/postgres-redis/: .env  docker-compose.yml
docs/docker-compose/sqlite/: .env  docker-compose.yml
docs/dockerhub/: README.md
scripts/: generate-content.py
src/: main.rs
src/services/: api.rs  caching.rs  database.rs  mod.rs  models.rs  postgres_database.rs  sqlite_database.rs
templates/: common_scripts.html  css.html  index.html  nav.html  snippets.html  tags.html
