[package]
name = "read_it_later"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tokio = { version = "1", features = ["full"] }
