[package]
name = "read_it_later"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
ammonia = "4.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
] }
tera = "1.20.0"
tokio = { version = "1", features = ["full"] }
